--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
   <div class="header">Welcome to HHS!</div>
-  <div class="main">
-    <p>You are an incoming 9th grade student.<p>
-  </div>
+  
+  <section id="000">
+    <p>You are an incoming 9th grade student. It is your first day as a high school student.<p>
+    <a href="#001">Check your schedule.</a>
+  </section>
+  
+  <section id="001">
+  <p>Your first class is Geometry. You have seven minutes before the late bell will ring.<p>
+  <a href="#002">Go to the bathroom.</a>
+  <a href="#003">Go to Geometry.</a>
+  </section>
+  
 </body>
+</html>
