--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Survive HHS!</title>
-  <style type=”text/css” rel=”stylesheet” href=”stylesheet.css” />
+  <link type=”text/css” rel=”stylesheet” href=”stylesheet.css” />
   <meta charset="utf-8"/>
 </head>
+
 <body>
   <div class="header">Welcome to HHS!</div>
   
@@ -14,9 +15,13 @@
   </section>
   
   <section id="001">
-  <p>Your first class is Geometry. You have seven minutes before the late bell will ring.<p>
-  <a href="#002">Go to the bathroom.</a>
-  <a href="#003">Go to Geometry.</a>
+    <p>Your first class is Geometry. You have seven minutes before the late bell will ring.<p>
+    <a href="#002">Go to the bathroom.</a>
+    <a href="#003">Go to Geometry.</a>
+  </section>
+  
+  <section id="002">
+    <p>You look around for a bathroom and eventually find one. After doing your business and washing your hands, you exit. Then you realize you don't know where your next class is.</p>
   </section>
   
 </body>
