--- a/index.html
+++ b/index.html
@@ -7,22 +7,6 @@
 </head>
 
 <body>
-  <div class="header">Welcome to HHS!</div>
-  
-  <section id="000">
-    <p>You are an incoming 9th grade student. It is your first day as a high school student.<p>
-    <a href="#001">Check your schedule.</a>
-  </section>
-  
-  <section id="001">
-    <p>Your first class is Geometry. You have seven minutes before the late bell will ring.<p>
-    <a href="#002">Go to the bathroom.</a>
-    <a href="#003">Go to Geometry.</a>
-  </section>
-  
-  <section id="002">
-    <p>You look around for a bathroom and eventually find one. After doing your business and washing your hands, you exit. Then you realize you don't know where your next class is.</p>
-  </section>
-  
+  <p>Testing! Is my website working?</p>  
 </body>
 </html>
