--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   <title>Survive HHS!</title>
+  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+   <meta charset="UTF-8">
 </head>
 
 <body>
