--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
-  <p>Testing! Is my website working?</p>  
+  
+<div class="header">Welcome to HHS!</div>
+  
+  <section id="000">
+    <p>You are an incoming 9th grade student. It is your first day as a high school student.<p>
+    <a href="#001">Check your schedule.</a>
+  </section>
+  
+  <section id="001">
+    <p>Your first class is Geometry. You have seven minutes before the late bell will ring.<p>
+    <a href="#002">Go to the bathroom.</a>
+    <a href="#003">Go to Geometry.</a>
+  </section>
+  
+  <section id="002">
+    <p>You look around for a bathroom and eventually find one. After doing your business and washing your hands, you exit. Then you realize you don't know where your next class is.</p>
+  </section>
+  
+  <section id="003">
+    <p>Geometry is in room 703, but where is that?</p>
+    <a href="#004">Ask for directions.</a>
+    <a href="#005">Try to find it on your own.</a>
+  </section>
+  
+  <section id="004">
+    <p>You find room 703, but you're already nearly five minutes late. Many other students are just arriving too. The teacher only says that it's okay because it's the first day of school, but you should make an effort to be on time in the future.</p>
+  </section>
+
 </body>
 </html>
