--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         console.log("Are you old enough to be in high school?");
       }
     };
+    checkAge(userAge);
     </script>
     <p>Good morning!</p>
     <p>You are an incoming 9th grade student. It is your first day as a high school student.<p>
