--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Survive HHS!</title>
   <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-   <meta charset="UTF-8">
+  <meta charset="UTF-8">
 </head>
 
 <body>
@@ -12,24 +12,12 @@
 
 <div class="container">
 <div class="story">
+  <section class="intro"><a href="#000">Start</a></section>
+  
   <section id="000">
-    <script>
-      confirm("Are you ready to begin?")
-      var userName = prompt("What is your name?")
-        console.log("Hello, " + userName + "!")
-      var userAge = prompt("How old are you?")
-      var checkAge = function(userAge) {
-      if(userAge >= 13) {
-        console.log("Welcome to high school!");
-      }
-      else {
-        console.log("Are you old enough to be in high school?");
-      }
-    };
-    checkAge(userAge);
-    </script>
+    <!--put javascript stuff here, see table in journal---> 
     <p>Good morning!</p>
-    <p>You are an incoming 9th grade student. It is your first day as a high school student.<p>
+    <p>You are an incoming 9th grade student. Today is your first day as a high school student.<p>
     <a href="#001">Check your schedule.</a>
   </section>
   
@@ -41,6 +29,8 @@
   
   <section id="002">
     <p>You look around for a bathroom and eventually find one. After doing your business and washing your hands, you exit. Then you realize you don't know where your next class is.</p>
+    <a href="#004">Ask for directions.</a>
+    <a href="#005">Try to find it on your own.</a>
   </section>
   
   <section id="003">
