--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <div class="container">
 <div class="story">
-  <section class="intro"><a href="#000">Start</a></section>
   
   <section id="000">
     <!--put javascript stuff here, see table in journal---> 
@@ -40,8 +39,11 @@
   </section>
   
   <section id="004">
-    <p>You find room 703, but you're already nearly five minutes late. Many other students are just arriving too. The teacher only says that it's okay because it's the first day of school, but you should make an effort to be on time in the future.</p>
+    <p>You see a teacher standing in the hallway, directing traffic. You ask him where room 703 is, and he directs you up the stairs. You arrive a few minutes before the bell rings.</p>
   </section>
+  
+  <section class="intro"><a href="#000">Start</a></section>
+  
 </div>
 </div>
 
