--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
   </section>
   
   <section id="004">
-    <p>You see a teacher standing in the hallway, directing traffic. You ask him where room 703 is, and he directs you up the stairs. You arrive a few minutes before the bell rings.</p>
+    <p>You see a teacher standing in the hallway, directing traffic. You ask him where room 703 is, and he directs you up the stairs. You arrive a few minutes before the bell rings. The teacher gives you a card to fill out with your personal information and hands out textbooks.</p>
+    <p>The rest of the day passes by quickly, and soon the last bell rings and ninth period is done. You go to your locker and pack up your belongings.</p>
+    <a href="#006">Go home.</a>
+    <a href="#007">Hang out with your friends.</a>
+</p>
+  </section>
+  
+  <section id="005">
+    <p>You struggle and end up arriving at the classroom three minutes late, but the teacher seems unsurprised. She lets everyone know that it’s normal to be late in the beginning, but that eventually you’ll all become used to the building.</p>
+    <p>The rest of the day passes by quickly, and soon the last bell rings and ninth period is done. You go to your locker and pack up your belongings.</p>
+    <a href="#006">Go home.</a>
+    <a href="#007">Hang out with your friends.</a>
+  </section>
+  
+  <section id="006">
+    <p>You begin the short walk home on your own, following the hordes of other students walking home. Once you get home, after putting down your bag, you...</p>
+    <a href="008">Eat a snack and turn on the TV.</a>
+    <a href="008">Take a nap.</a> 
+    <a href="009">Eat a snack and start homework immediately.</a>
+  </section>
+  
+  <section id="007">
+    <p>You find some of your friends from 8th grade and talk with them for a while before </p>
   </section>
   
   <section class="intro"><a href="#000">Start</a></section>
