--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        return "Are you old enough to be in high school?";
       }
     };
-    checkAge(userAge);
+    function checkAge(userAge);
 </script>
 
     <p>Good morning!</p>
@@ -83,7 +83,33 @@
   
   <section id="008">
     <p>Two hours later, you realize you haven't done anything. It's only the first day of school, though, so you don't have much work besides getting several papers signed and filling out some personal information sheets.</p>
+    <a href="#011">Go to sleep.</a>
   </section>
+  
+  <section id="009">
+    <p>You eat some pretzels and immediately start filling out your information sheets and getting your student contracts. Within an hour you're finished and have the rest of the evening to relax and scroll through social media.</p>
+    <a href="#011">Go to sleep.</a>
+  </section>
+  
+  <section="010">
+    <p>You ask your friend for a ride home and soon arrive at your house.</p>
+    <a href="#008">Eat a snack and turn on the TV.</a>
+    <a href="#008">Take a nap.</a> 
+    <a href="#009">Eat a snack and start homework immediately.</a>
+  </section>
+  
+  <section="011">
+    <p>THREE WEEKS LATER...</p>
+    <p>Your world history teacher assigns your first research paper of the year. She goes over the basic formatting and tells everyone to come see her at extra help if you want her to look over it and make suggestions. </p>
+    <a href="#012">Work on a first draft over this week to show her at extra help next week.</a>
+    <a href="#013">Put the assignment sheet away and think about it later.</a>
+  </section>
+  
+  <section="012">
+    <p>When you get home, you open up a new Microsoft Word file and begin typing out the heading. After checking the assignment sheet, you begin looking for evidence to back up your claim. You work on it again two days later, and eventually have two pages done.</p>
+    <p>At extra help the next week, you see mostly juniors in the room. You wait until the teacher's done reviewing with the other students and hand her the draft of your essay.</p>
+  </section>
+  
   <section class="intro"><a href="#000">Start</a></section>
   
 </div>
