--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
     <p>The rest of the day passes by quickly, and soon the last bell rings and ninth period is done. You go to your locker and pack up your belongings.</p>
     <a href="#006">Go home.</a>
     <a href="#007">Hang out with your friends.</a>
-</p>
   </section>
   
   <section id="005">
@@ -70,9 +69,9 @@
   
   <section id="006">
     <p>You begin the short walk home on your own, following the hordes of other students walking home. Once you get home, after putting down your bag, you...</p>
-    <a href="008">Eat a snack and turn on the TV.</a>
-    <a href="008">Take a nap.</a> 
-    <a href="009">Eat a snack and start homework immediately.</a>
+    <a href="#008">Eat a snack and turn on the TV.</a>
+    <a href="#008">Take a nap.</a> 
+    <a href="#009">Eat a snack and start homework immediately.</a>
   </section>
   
   <section id="007">
@@ -107,7 +106,7 @@
   
   <section="012">
     <p>When you get home, you open up a new Microsoft Word file and begin typing out the heading. After checking the assignment sheet, you begin looking for evidence to back up your claim. You work on it again two days later, and eventually have two pages done.</p>
-    <p>At extra help the next week, you see mostly juniors in the room. You wait until the teacher's done reviewing with the other students and hand her the draft of your essay.</p>
+    <p>At extra help the next week, you see mostly juniors in the room. You wait until the teacher's done reviewing with the other students and hand her the draft of your essay. </p>
   </section>
   
   <section class="intro"><a href="#000">Start</a></section>
