--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
   
   <section id="000">
    <script>
-      confirm("Are you ready to begin?")
-      var userName = prompt("What is your name?")
+      confirm("Are you ready to begin?");
+      var userName = prompt("What is your name?");
+        console.log("Hello, " + userName + "!");
         return "Hello, " + userName + "!";
-      var userAge = prompt("How old are you?")
+      var userAge = prompt("How old are you?");
       var checkAge = function(userAge) {
       if(userAge >= 13) {
+        console.log ("Welcome to high school!");
         return "Welcome to high school!";
       }
       else {
-       return "Are you old enough to be in high school?";
+        console.log ("Are you old enough to be in high school?");
+        return "Are you old enough to be in high school?";
       }
     };
-    function checkAge(userAge);
+   
 </script>
 
     <p>Good morning!</p>
