--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   
   <section id="014">
   <script type="text/javascript">
-    var numHours = prompt("How many hours of sleep did you get after finishing that paper?")
+    var numHours = prompt("How many hours of sleep did you get after finishing that paper?");
     var sleepCheck = function(numHours) {
     if(numHours >= 6) {
     	 return "Wow! Either you didn't try at all or you actually worked on it before the week it was due!";
@@ -122,6 +122,7 @@
     	 return "You really should think about planning your time better. Sleep is important! Don't you want to grow taller?";
     }
   };
+  sleepCheck(numHours);
   </script>
   <a href="#016">Next</a>
   </section>
