--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <script type="text/javascript">
   var userName = prompt("What is your name?");
   var greeting = function(userName) {
-    console.log ("Hello, " + userName + "!")
+    console.log ("Hello, " + userName + "!");
     return "Hello, " + userName + "!";
+  };
   greeting(userName);
   var userAge = prompt("How old are you?");
   var checkAge = function(userAge) {
