--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   
   <section id="000">
   <script type="text/javascript">
+  confirm("Are you ready to begin?");
   var userName = prompt("What is your name?");
   var greeting = function(userName) {
     console.log ("Hello, " + userName + "!");
@@ -125,7 +126,7 @@
     <p>You start working on the corrections and end up finishing them by the next week.</p>
     <p>Four weeks later.</p>
     <p>Your paper is due tomorrow. You ask some of your friends if they've started it, but many of them haven't. In class, some kids are already trying to petition for an extension, but the teacher refuses. Thankfully, you've already mostly finished the paper.</p>
-  <a href="#015">Next</a>
+  <a href="#016">Next</a>
   </section>
   
   <section id="015">
@@ -139,10 +140,20 @@
     	 return "You really should think about planning your time better. Sleep is important! Don't you want to grow taller?";
     }
   };
-  sleepCheck(numHours);
-  $(#015).ready(sleepCheck);
-  </script>
-
+    sleepCheck(numHours);
+    </script>
+    <a href="#017">Next</a>
+  </section>
+  
+  <section id="016">
+    <p>Two weeks later, your teacher hands back the papers. You got a B+, but from what you see other kids getting, that's pretty good. The comments your teacher made are mostly about needing some more analysis or pointing out spelling and grammatical errors, but she says that you did a very good job for your first paper.</p>
+    <a href="#017">Next</a>
+  </section>
+  
+  <section id="017">
+    <p>This is just one of many examples showing the different choices that you can make in high school. It's not always as simple as choosing to work on a project ahead of time or leaving it till the end (although procrastination is a very real problem in high school, regardless of what grade you're in). You can choose to raise your hand in class, to offer to help classmates, to study by yourself, with a friend, or not at all. You can choose to go out often or stay in and relax, or to try out for a sport or not, or to go to various clubs.</p>
+    
+    <p>It'd be impossible to build an extensive game detailing every single choice you could make in high school, so I chose to just make a simple game with the time I had. I hope you enjoyed this! </p>
   </section>
   
   <section class="intro"><a href="#000">Start</a></section>
